--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
     background-color: #0d192b;
+    max-width: 1440px;
 }
 
 .navbar{
@@ -12,7 +13,7 @@ body{
     text-align: center;
     padding: 25px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.953125vw;
     font-family: universal sans;
 }
 
@@ -21,7 +22,7 @@ body{
     text-align: center;
     padding: 25px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 1.953125vw;
 
 }
 
@@ -67,7 +68,7 @@ body{
     position: relative;
     bottom: 10px;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 3.125vw;
 }
 
 .textAboutme > p{
@@ -76,7 +77,7 @@ body{
     bottom: 5px;
     overflow: hidden;
     width: 880px;
-    font-size: 20px;
+    font-size: 1.5625vw;
 }
 
 .textAboutme > button{
@@ -90,7 +91,7 @@ body{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.25vw;
     position: relative;
     bottom: 20px;
     right: 30px;
@@ -116,7 +117,7 @@ body{
     position: relative;
     bottom: 10px;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 3.125vw;
     text-align: center;
 }
 
@@ -131,9 +132,10 @@ body{
     border-left: 3px solid #f2f2f2;
     height: 450px;
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     left: 50%;
-    top: 500;
-    margin-left: -3px;
+    right: 0;
   }
 
   .schools > h3{
@@ -157,6 +159,7 @@ body{
     bottom: 80px;
     left: 690px;
     width: 60px;
+    max-width: 100%;
   }
 
   .schools > p{
@@ -205,6 +208,7 @@ body{
     bottom: 78px;
     left: 700px;
     width: 60px;
+    max-width: 100%;
   }
 
   .proExp > p{
@@ -236,6 +240,7 @@ body{
     bottom: 40px;
     left: 700px;
     width: 60px;
+    max-width: 100%;
   }
 
   .skills > button{
