--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body{
     background-color: #0d192b;
-    margin: 0;
     max-width: 1440px;
 }
 
@@ -39,17 +38,14 @@ body{
     margin-right: 25px;
     margin-bottom: 25px;
     border-radius: 15px;
-    max-width: 1440px;
-    -webkit-box-sizing: border-box;
+    max-width: 100%;
 }
 
 .aboutme{
     display: inline-block;
     vertical-align: top;
     margin:0;
-    max-width: 1440px;
-    -webkit-box-sizing: border-box;
-    
+    max-width: 100%;
 }
 
 .imgAlex{
@@ -65,13 +61,12 @@ body{
     border-radius: 15px;
     padding: 4px;
     width: 250px;
-    -webkit-box-sizing: border-box;
     margin-right: 15px;
 }
 
 .textAboutme{
     display: inline-block;
-    max-width: 1440px;
+    max-width: 100%;
 }
 
 .textAboutme > h1{
@@ -89,7 +84,6 @@ body{
     overflow: hidden;
     max-width: 850px;
     font-size: 1.5625vw;
-    -webkit-box-sizing: border-box;
 }
 
 .button{
@@ -105,7 +99,6 @@ body{
     font-size: 1.25vw;
     position: relative;
     bottom: 20px;
-    -webkit-box-sizing: border-box;
 }
 
 .main2{
@@ -118,7 +111,7 @@ body{
     margin-right: 25px;
     margin-bottom: 25px;
     border-radius: 15px;
-    max-width: 1440px;
+    max-width: 100%;
 }
 
 .curriculum{
